kubernetes/apps/zeroclaw/zeroclaw/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: zeroclaw-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: zeroclaw
  oidc:
    provider:
      issuer: "https://id.${SECRET_DOMAIN}"
    clientID: "18c9256c-06d9-4717-ba0a-dcdad4a75a88"
    clientSecret:
      name: zeroclaw-oidc-secret
    redirectURL: "https://zeroclaw.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    cookieDomain: "${SECRET_DOMAIN}"
    cookieNames:
      idToken: zeroclaw-id-token
      accessToken: zeroclaw-access-token
    forwardAccessToken: true
    scopes:
      - openid
      - profile
      - email
      - groups
